fixed more layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
     font-size: 87.5%; /* Base font size: 14px */
     font-family: 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.429;
-    margin: 0;
+    margin: 0 20px 0 170px;
     padding: 0;
     text-align: left;
 }
@@ -280,11 +280,8 @@ button.map-buttons.current{
 *****************/
 #featured {
 	background: #fff;
-	margin-bottom: 2em;
 	overflow: hidden;
 	padding: 20px;
-	width: 80%;
-        margin: 0 20px 0 170px;
 
 	border-radius: 10px;
 	-moz-border-radius: 10px;
